--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             rel="stylesheet"
             href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
         />
-        <title>React App</title>
+        <title>Health Tracker</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
